finished the closed loop control

--- a/stepper_controller_nucleo/.vscode/launch.json
+++ b/stepper_controller_nucleo/.vscode/launch.json
@@ -1,22 +1,25 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "stlinkgdbtarget",
+      "request": "launch",
+      "name": "STM32Cube: Launch (ST-LINK GDB Server)",
+      "origin": "snippet",
+      "cwd": "${workspaceFolder}",
+
+      "preBuild": "${command:st-stm32-ide-debug-launch.build}",
+
+      "imagesAndSymbols": [
         {
-            "type": "stlinkgdbtarget",
-            "request": "launch",
-            "name": "STM32Cube: STM32 Launch ST-Link GDB Server",
-            "origin": "snippet",
-            "cwd": "${workspaceFolder}",
-            "preBuild": "${command:st-stm32-ide-debug-launch.build}",
-            "runEntry": "main",
-            "imagesAndSymbols": [
-                {
-                    "imageFileName": "${command:st-stm32-ide-debug-launch.get-projects-binary-from-context1}"
-                }
-            ]
+          "imageFileName": "${command:st-stm32-ide-debug-launch.get-projects-binary-from-context1}"
         }
-    ]
+      ]
+
+      // NOTE:
+      // I removed: "runEntry": "main"
+      // so it won't halt at main and make you think the motor is dead.
+      // UART prints are NOT shown in the Debug Console—use Serial Monitor on the ST-LINK VCP COM port.
+    }
+  ]
 }
